--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PL">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>RWD</title>
 </head>
 <body>
+   <div id="gallery">
+      <div id="header">
+       <h2>I AM THE BEST</h2>
+       <h1>FRONT END DEVELOPER</h1>
+       </div>
+   </div>
     
 </body>
 </html>
